0.x (upcoming release)
- (feature) add possibility for search series by catalog number in user's collection (contributed by Mukesh Katariya)

0.4
- (infrastructure) switched to Java8
- (user interface) ported to Bootstrap 3
- (infrastructure) ported to Spring Boot
- (functionality)  implemented possibility to user to add additional images to series
- (functionality)  allow to different series to have the same catalog numbers
- (functionality)  add possibility for search series by catalog number (contributed by Sergey Chechenev)
- (functionality)  add interface for viewing suspicious activity (contributed by Sergey Chechenev)
- (functionality)  allow to users to add categories and countries
- (infrastructure) ported to Spring's JdbcTemplate (get rid of Spring-Data-JPA and Hibernate)
- (functionality)  send daily reports to admin by e-mail
- (infrastructure) use logback (instead of log4j) for logging
- (functionality)  add possibility for adding series sales
- (functionality)  add interface for viewing series sales (contributed by Sergey Chechenev)
- (functionality)  name of category/country in Russian now are optional fields
- (functionality)  preview now is generated after uploading an image
- (functionality)  add interface for adding buyers and sellers
- (functionality)  add capability to specify image URL (as alternative to providing a file)
- (functionality)  admin can import a series from an external site
- (integration)    migrate from coveralls.io to codecov.io service for code coverage
- (functionality)  add support for specifying Solovyov catalog numbers
- (functionality)  add support for specifying Zagorski catalog numbers
- (functionality)  user may specify how many stamps from a series in his/her collection
- (functionality)  paid users may specify a price that he/she paid for a series
- (infrastructure) use WireMock in integration tests for mocking external services