@@ -52,10 +52,6 @@ after_success:
   - if [ "$SPRING_PROFILES_ACTIVE" = 'travis' ]; then
       ./src/main/scripts/show-spring-boot-version-diff.sh;
     fi
-  - if [ "$SPRING_PROFILES_ACTIVE" = 'travis' ]; then
-      ./src/main/scripts/ci/publish-code-coverage.sh;
-      sleep 5;
-    fi
 
 deploy:
   provider: script
